1/15/2023
	Added support for magic lines...thanks Raumplaner!
	Added support for psycho killer cages, including a test case
	Added support for global Modular squares, similar to Entropy but using the modular grouping of digits
	Added support for knightmare constraint, including test case
	Added support for logic bombs

12/22/22
	Added support for full rank clues
	Added support for David and Goliath pairs (Inspired by Bill Murphy...thanks!)
	Added support for All Odd or Even clues (Inspired by clover!...thanks!)
	Added support for Parity Party clues
	Added support for Double X-Sums

11/17/22
	Added support for minimax clues (Inspired by clover!...thanks!)
	Added support for maximin clues (Inspired by clover!...thanks!)
	Added support for repeating arrows (Inspired by Richard Stolk...thanks!)

10/25/22
	Added support for 10 lines
	Added support for heavy arrows
	Added support for clock lines
	Added support for Either-Or clues
	Added test harness support to doubleDoku puzzles
	Added multiple test cases
	
10/6/22ter
	Added additional test cases

10/6/22bis
	Refactored for issue #28, so now regions are stored as (i,j) (0-base) pairs, instead of as the cellValues variables. Updated all functions that required region-based calculations (Rossini, Outside, Region Sum Lines). Specifically greatly improved implementation of Schrödinger cell region sum lines, which required building a variable index for each line. That was a poor design choice.
	
10/6/22
	Added support for scary cells
	Added support for Order Sums Cages
	Added support for parity quads (like entropic quads but for parity) and Quadro (like global entropy, but for parities)
	Added test case
	
10/2/22
	Most of the constraint additions here were inspired by Richard Stolk's Sudoku Variants Series on LMD. Thanks!
	Added support for not-RenbanLines, which supports an upgrade to the global non-consecutive functionality, allowing non-consecutive to be applied to longer strings of contiguous digits.