@@ -1,3 +1,8 @@
+2/3/2023
+	Added support for repelling digits, inspired by pirate sudoku...thanks clover!
+	Added support for punctured cages, inspired by zetamath...thanks!
+	Added test cases
+
 1/15/2023
 	Added support for magic lines...thanks Raumplaner!
 	Added support for psycho killer cages, including a test case
